--- a/playground.html
+++ b/playground.html
@@ -6,5 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Playground — Complete Intro to Vue 3</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello Vue brother of Django</h1>
+    <div id="app">{{ message }}</div>
+
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script>
+      const { createApp } = Vue
+
+      const app = createApp(
+        {
+          data(){
+            return{
+              message:'Hello finally from Vue'
+            }
+          }
+        }
+      )
+
+      app.mount('#app')
+    </script>
+  </body>
 </html>
