--- a/playground.html
+++ b/playground.html
@@ -20,6 +20,7 @@
       > -->
       <input type="number" name="amount" id="" 
       v-model.number="increament_amount">
+      <!-- you can simply use @ sign instead of v-on: -->
       <button v-on:click="incrementCount">Increment number</button>
       <hr>
 
